--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Download artifact
               uses: actions/download-artifact@v4
               with:
-                  name: calculator-jar
+                  name: main-jar
                   path: ./artifacts
 
             - name: Display artifacts
