--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
     uses: ./.github/workflows/test.yml 
  
    deploy:
+        needs : test
         runs-on: ubuntu-latest
         if: github.ref == 'refs/heads/main'
 
