--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,13 @@ on:
             - main
 
 jobs:
-   
+   call-job1:
+    uses: ./.github/workflows/build.yml
+   call-job2:
+    uses: ./.github/workflows/test.yml 
  
    deploy:
+        needs : call-job2
         runs-on: ubuntu-latest
         if: github.ref == 'refs/heads/main'
 
