--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,11 @@ on:
      workflow_call:
 
 jobs:
-    
+    call-job1:
+     uses: ./.github/workflows/build.yml
 
     Test:
+        needs : call-job1
         runs-on: ubuntu-latest
 
         steps:
